--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,7 @@
   preprint={true},
   title={DynaBARN: Benchmarking Metric Ground Navigation in Dynamic Environments},
   author={Anirudh Nair and Fulin Jiang and Kang Hou and Zifan Xu and Shuozhe Li and Xuesu Xiao and and Peter Stone},
+  journal={Submitted to International Symposium on Safety, Security, and Rescue Robotics (SSRR) 2023},
   year={2022},
   pdf = {dyna_barn.pdf},
   figure = {dyna_barn.png},
@@ -26,6 +27,7 @@
   preprint={true},
   title={Benchmarking Reinforcement Learning Techniques for Autonomous Navigation},
   author={Zifan Xu and Bo Liu and Anirudh Nair and Xuesu Xiao and Peter Stone},
+  journal={Submitted to International Conference on Robot Learning (CoRL) 2022},
   year={2022},
   pdf = {navbenchmark.pdf},
   figure = {navbenchmark.png},
@@ -36,6 +38,7 @@
   preprint={true},
   title={Model-Based Meta Automatic Curriculum Learning},
   author={Zifan Xu and Yulin Zhang and Shahaf S. Shperberg and Yuqian Jiang and Reuth Mirsky and Bo Liu and Peter Stone},
+  journal={Submitted to Association for the Advancement of Artificial Intelligence (AAAI) 2023},
   year={2022},
   pdf = {MM-ACL-ZIFAN.pdf},
   figure = {MM-ACL-ZIFAN.png},
